--- a/session/templates/session/_base_head.html
+++ b/session/templates/session/_base_head.html
@@ -3,3 +3,4 @@
 <meta charset="UTF-8">
 <title>Welcome To</title>
 <link rel="shortcut icon" type="image/png" href="{% static 'favicon/favicon.ico' %}">
+<link rel="stylesheet" href="{% static 'styles.css' %}">
