html의 오류를 수정하다.

--- a/session/templates/session/construction.html
+++ b/session/templates/session/construction.html
@@ -11,8 +11,8 @@
     <div>{{ center_num.card.number.value }}</div>
     <div>{{ right_num.card.number.value }}</div>
     <div>{{ left_effect.card.effect.title }}</div>
-    <div>{{ center_num.card.effect.title }}</div>
-    <div>{{ right_num.card.effect.title }}</div>
+    <div>{{ center_effect.card.effect.title }}</div>
+    <div>{{ right_effect.card.effect.title }}</div>
   </div>
 {% endblock %}
 
