--- a/session/templates/session/session_list.html
+++ b/session/templates/session/session_list.html
@@ -7,7 +7,7 @@
 {% block body %}
   <ul>
     {% for session in session_list %}
-      <li><a href="{% url 'current_construction' session_id=session.id %}">{{ session.title }}</a></li>
+      <li><a href="{% url 'current_constructions' session_id=session.id %}">{{ session.title }}</a></li>
     {% endfor %}
   </ul>
 {% endblock %}
