업로드된 이미지 데이터를 바로 화면에 그리도록 하다.

--- a/session/templates/session/session_list.html
+++ b/session/templates/session/session_list.html
@@ -10,6 +10,7 @@
       <li><a href="{% url 'current_constructions' session_id=session.id %}">{{ session.title }}</a></li>
     {% endfor %}
   </ul>
+  {#  <div><img src="{{ test.image.url }}" /></div>#}
 {% endblock %}
 
 {% block javascript %}
