--- a/session/templates/session/construction.html
+++ b/session/templates/session/construction.html
@@ -7,7 +7,7 @@
 {% block body %}
   <div>턴 : {{ turn }}</div>
   <div class="grid-container">
-    <div>{{ left_num.card.number.value }}</div>
+    <div>{{ left_num.card.number.value }}<img src="{% static left_num.card.image.url %}"/></div>
     <div>{{ center_num.card.number.value }}</div>
     <div>{{ right_num.card.number.value }}</div>
     <div>{{ left_effect.card.effect.title }}</div>
