--- a/session/templates/session/construction.html
+++ b/session/templates/session/construction.html
@@ -10,25 +10,25 @@
     <div class="grid-container">
       <div>
         <div>{{ left_num.card.number }}</div>
-        <img style="height: 40vh;" src="{{ left_num.card.image.url }}"/>
+        <img style="height: 40vh;" src="{{ left_num.card.image_url }}"/>
       </div>
       <div>
         <div>{{ center_num.card.number }}</div>
-        <img style="height: 40vh;" src="{{ center_num.card.image.url }}"/></div>
+        <img style="height: 40vh;" src="{{ center_num.card.image_url }}"/></div>
       <div>
         <div>{{ right_num.card.number }}</div>
-        <img style="height: 40vh;" src="{{ right_num.card.image.url }}"/>
+        <img style="height: 40vh;" src="{{ right_num.card.image_url }}"/>
       </div>
       <div>
         <div>{{ left_effect.card.effect }}</div>
-        <img style="height: 40vh;" src="{{ left_effect.card.effect.image.url }}"/>
+        <img style="height: 40vh;" src="{{ left_effect.card.effect.image_url }}"/>
       </div>
       <div>
         <div>{{ center_effect.card.effect }}</div>
-        <img style="height: 40vh;" src="{{ center_effect.card.effect.image.url }}"/>
+        <img style="height: 40vh;" src="{{ center_effect.card.effect.image_url }}"/>
       </div>
       <div><div>{{ right_effect.card.effect }}</div>
-        <img style="height: 40vh;" src="{{ right_effect.card.effect.image.url }}"/
+        <img style="height: 40vh;" src="{{ right_effect.card.effect.image_url }}"/
       </div>
     </div>
   </body>
